# sdl3-starter

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
.github/workflows/: release.yml  test.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/sandorex/sdl3example/: MainActivity.java
android/app/src/main/res/values/: strings.xml
cmake/: ExtendedVersion.cmake  FetchDependencies.cmake  FetchSDL.cmake  Preludes.cmake
src/: CMakeLists.txt  main.cc  main_tests.cc  options.h.in
tests/: CMakeLists.txt
